# DummyDB

./: LICENSE  README.md
api/: .gitignore  README.md  main.py  pyproject.toml
api/migrations/: 20250821_012054_add_schema_parse_enhancements.sql
api/scripts/: startup.py
api/src/: Dockerfile  app.py  docker-compose.yml  requirements.txt
api/src/lib/: database.py  schemas.py
api/src/routers/: __init__.py  migration_router.py  schema_parse_router.py
api/src/utils/: migrations.py  schema_parse.py
ui/: mdx-components.ts  next.config.ts  package-lock.json  package.json  schema_a9b98692a4a9d6dc02421b95ff84d389.json  tsconfig.json
ui/app/: _meta.ts  globals.css  layout.tsx  page.tsx
ui/app/docs/: layout.tsx
ui/app/docs/[[...mdxPath]]/: page.tsx
ui/app/generate/: page.tsx
ui/components/: Footer.tsx  Navbar.tsx  ServerStatus.tsx
ui/content/: creating-v4.mdx  hello-world.mdx
ui/content/folder/: new.mdx
